--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo"><img src="assets/img/logo1.png" alt=""></a>
+            <a href="index.html" class="logo"><img src="assets/img/logoa.jpg" alt="" height="85"></a>
             <h1 class="logo"><a href="index.html">OnePage MP</a></h1>
 
 
@@ -236,6 +236,95 @@
         </div>
     </section>
 
+    <!-- Sectiunea 2 -->
+    <section id="team" class="team">
+      <div class="container" data-aos="fade-up">
+
+          <div class="section-title">
+              <h2>About</h2>
+              <h3>Our Hardworking <span>Team</span></h3>
+              <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque
+                  vitae autem.</p>
+          </div>
+
+          <div class="row">
+
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+                  <div class="member">
+                      <div class="member-img">
+                          <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                          <div class="social">
+                              <a href=""><i class="bi bi-twitter"></i></a>
+                              <a href=""><i class="bi bi-facebook"></i></a>
+                              <a href=""><i class="bi bi-instagram"></i></a>
+                              <a href=""><i class="bi bi-linkedin"></i></a>
+                          </div>
+                      </div>
+                      <div class="member-info">
+                          <h4>Walter White</h4>
+                          <span>Chief Executive Officer</span>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+                  <div class="member">
+                      <div class="member-img">
+                          <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                          <div class="social">
+                              <a href=""><i class="bi bi-twitter"></i></a>
+                              <a href=""><i class="bi bi-facebook"></i></a>
+                              <a href=""><i class="bi bi-instagram"></i></a>
+                              <a href=""><i class="bi bi-linkedin"></i></a>
+                          </div>
+                      </div>
+                      <div class="member-info">
+                          <h4>Sarah Jhonson</h4>
+                          <span>Product Manager</span>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+                  <div class="member">
+                      <div class="member-img">
+                          <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                          <div class="social">
+                              <a href=""><i class="bi bi-twitter"></i></a>
+                              <a href=""><i class="bi bi-facebook"></i></a>
+                              <a href=""><i class="bi bi-instagram"></i></a>
+                              <a href=""><i class="bi bi-linkedin"></i></a>
+                          </div>
+                      </div>
+                      <div class="member-info">
+                          <h4>William Anderson</h4>
+                          <span>CTO</span>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+                  <div class="member">
+                      <div class="member-img">
+                          <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                          <div class="social">
+                              <a href=""><i class="bi bi-twitter"></i></a>
+                              <a href=""><i class="bi bi-facebook"></i></a>
+                              <a href=""><i class="bi bi-instagram"></i></a>
+                              <a href=""><i class="bi bi-linkedin"></i></a>
+                          </div>
+                      </div>
+                      <div class="member-info">
+                          <h4>Amanda Jepson</h4>
+                          <span>Accountant</span>
+                      </div>
+                  </div>
+              </div>
+
+          </div>
+
+      </div>
+  </section>
     <!-- Sectiunea 3 -->
     <section id="services" class="services">
         <div class="container" data-aos="fade-up">
@@ -318,6 +407,7 @@
             <li data-filter=".filter-app">App</li>
             <li data-filter=".filter-card">Card</li>
             <li data-filter=".filter-web">Web</li>
+            <li data-filter=".filter-free">Free</li>
           </ul>
         </div>
       </div>
@@ -421,6 +511,17 @@
               class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
           </div>
+
+        </div> 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-free">
+          <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Free</h4>
+            <p>Free</p>
+            <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+              class="portfolio-lightbox preview-link" title="Free"><i class="bx bx-plus"></i></a>
+            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
         </div>
 
       </div>
@@ -499,7 +600,19 @@
                   </p>
                 </div>
               </div><!-- End testimonial item -->
-  
+              
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <h3>John Larson</h3>
+                  <h4>Entrepreneur</h4>
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
+                </div>
+              </div><!-- End testimonial item -->
             </div>
             <div class="swiper-pagination"></div>
           </div>
